두번째 커밋

--- a/front/index.html
+++ b/front/index.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>한예나</title>
   </head>
-  <link rel="stylesheet" href="/public/index.css" />
+  <link rel="stylesheet" href="./public/index.css" />
   <body>
-    <h1>Todo List</h1>
+    <div class="header">
+      <img class="img" src="./public/codingon.png" />
+      <h1>Todo List</h1>
+    </div>
+
+    <li>
+      <input type="checkbox" name="delectus aut autem" /> delectus aut autem
+    </li>
+    <li><input type="checkbox" />quis ut nam facilis et officia qui</li>
+    <li><input type="checkbox" />fugiat veniam minus</li>
+    <li><input type="checkbox" />et porro tempora</li>
+    <li>
+      <input type="checkbox" />laboriosam mollitia et enim quasi adipisci quia
+      provident illum
+    </li>
+    <li>
+      <input type="checkbox" />qui ullam ratione quibusdam voluptatem quia omnis
+    </li>
+    <li><input type="checkbox" />illo expedita consequatur quia in</li>
+    <li><input type="checkbox" />quo adipisci enim quam ut ab</li>
+    <li>
+      <input type="checkbox" />illo est ratione doloremque quia maiores aut
+    </li>
   </body>
 </html>
